# tribles-rust

./: .gitignore  CHANGELOG.md  Cargo.toml  INVENTORY.md  README.md  query-language.html  repository-workflows.html
benches/: benchmark.rs  dataset_vs_tribles.rs  json_export.rs  json_ld.rs  path_query.rs
book/: book.toml
book/src/: SUMMARY.md  architecture.md  atreides-join.md  capability-auth.md  commit-selectors.md  descriptive_types.md  distributed-sync.md  garbage-collection.md  getting-started.md  glossary.md  importing-data-formats.md  incremental-queries.md  introduction.md  macro-cookbook.md  patterns-and-recipes.md  pile-blob-metadata.md  pile-format.md  portability-and-formats.md  query-engine.md  query-language.md  repository-workflows.md  schemas.md
book/src/deep-dive/: README.md  identifiers.md  patch.md  trible-structure.md
docs/: DESIGN.md  FACULTY_INTEGRATION.md  HNSW_GRAPH_ENCODING.md  QUERY_ENGINE_INTEGRATION.md  tribleset_fingerprint.md  triblespace_bundles.md  triblespace_checkout.md  triblespace_overlay_api.md  triblespace_schemas.md  triblespace_staging.md  wasm_limits.md
examples/: blob_sizes_at_scale.rs  compose_bm25_and_pattern.rs  compose_hnsw_and_pattern.rs  custom_schema.rs  faculty_wiki_search.rs  hybrid_search.rs  multi_term_bm25_search.rs  pattern_changes.rs  phrase_search.rs  query_demo.rs  query_latency.rs  repo.rs  ring_vs_csr.rs  ring_vs_csr_hnsw.rs  workspace.rs
proofs/: repo_ancestors_harness.rs
src/: bm25.rs  channel.rs  constraint.rs  follower.rs  hnsw.rs  host.rs  identity.rs  leader.rs  lib.rs  node.rs  peer.rs  protocol.rs  remote.rs  ring.rs  schemas.rs  server.rs  succinct.rs  sync.rs  telemetry.rs  tokens.rs  tracking.rs
tests/: branch.rs  engine_integration.rs  find_bare.rs  find_macro.rs  find_projection.rs  objectstore_meta_forget.rs  objectstore_repo.rs  pattern_changes.rs  pile_empty_blob.rs  pile_iter_validation.rs  pile_metadata.rs  pile_ondisk_roundtrip.rs  pile_refresh_truncate.rs  pile_roundtrip.rs  pile_sim.rs  push_merge.rs  repository.rs  rollup_roundtrip.rs  scale_smoke.rs  workspace.rs
tests/trybuild/: find_unbound_projection.rs  find_unbound_projection.stderr
trible/: CHANGELOG.md  Cargo.toml
trible/src/: main.rs
trible/src/cli/: branch.rs  mod.rs  team.rs
trible/src/cli/pile/: branch.rs  mod.rs  net.rs  squash.rs
trible/tests/: branch_set_e2e.rs  consolidate_e2e.rs  pile.rs  reflog_e2e.rs  store.rs  team_e2e.rs
triblespace-core/: Cargo.toml
triblespace-core-macros/: Cargo.toml
triblespace-core/src/: attribute.rs  blob.rs  debug.rs  examples.rs  id.rs  lib.rs  metadata.rs  patch.rs  prelude.rs  query.rs  repo.rs  trible.rs  value.rs  value_formatter.rs  wasm.rs
triblespace-core/src/blob/: cache.rs  memoryblobstore.rs  schemas.rs
triblespace-core/src/blob/schemas/: array.rs  filebytes.rs  longstring.rs  simplearchive.rs  succinctarchive.rs  wasmcode.rs
triblespace-core/src/blob/schemas/succinctarchive/: universe.rs
triblespace-core/src/export/: json.rs  mod.rs
triblespace-core/src/id/: fucid.rs
triblespace-core/src/import/: import_attribute.rs  json.rs  json_tree.rs  mod.rs  ntriples.rs
triblespace-core/src/patch/: branch.rs  bytetable.rs  entry.rs  leaf.rs
triblespace-core/src/prelude/: blobschemas.rs  valueschemas.rs
triblespace-core/src/query/: constantconstraint.rs  equalityconstraint.rs  hashmapconstraint.rs  hashsetconstraint.rs  ignore.rs  intersectionconstraint.rs  patchconstraint.rs  rangeconstraint.rs  regularpathconstraint.rs  sortedsliceconstraint.rs  unionconstraint.rs
triblespace-core/src/repo/: branch.rs  capability.rs  commit.rs  hybridstore.rs  memoryrepo.rs  objectstore.rs  pile.rs
triblespace-core/src/trible/: fragment.rs  spread.rs  tribleset.rs
triblespace-core/src/trible/tribleset/: triblesetconstraint.rs  triblesetidrangeconstraint.rs  triblesetrangeconstraint.rs
triblespace-core/src/value/: schemas.rs
triblespace-core/src/value/schemas/: boolean.rs  ed25519.rs  f256.rs  f64.rs  genid.rs  hash.rs  iu256.rs  linelocation.rs  r256.rs  range.rs  shortstring.rs  time.rs
triblespace-core/tests/: attributes_macro.rs  json_export.rs  ntriples_integration.rs  proptest_entity.rs  proptest_import_export.proptest-regressions  proptest_import_export.rs  proptest_patch.rs  proptest_query.rs  proptest_repo.rs  proptest_serialization.rs  proptest_tribleset.rs
triblespace-macros/: Cargo.toml
triblespace-macros-common/: Cargo.toml
triblespace-macros-common/src/: attributes.rs  find.rs  lib.rs
triblespace-macros/src/: lib.rs
triblespace-net/: Cargo.toml  README.md
triblespace-net/src/: host.rs  identity.rs  lib.rs  peer.rs  protocol.rs  tracking.rs
triblespace-net/src/dht/: mod.rs
triblespace-net/tests/: timestamp_regression.rs  two_peer_convergence.rs
triblespace-search/: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
triblespace-search/docs/: DESIGN.md  FACULTY_INTEGRATION.md  HNSW_GRAPH_ENCODING.md  QUERY_ENGINE_INTEGRATION.md
triblespace-search/examples/: blob_sizes_at_scale.rs  compose_bm25_and_pattern.rs  compose_hnsw_and_pattern.rs  faculty_wiki_search.rs  hybrid_search.rs  multi_term_bm25_search.rs  phrase_search.rs  query_demo.rs  query_latency.rs  ring_vs_csr.rs  ring_vs_csr_hnsw.rs
triblespace-search/src/: bm25.rs  constraint.rs  hnsw.rs  lib.rs  schemas.rs  succinct.rs  tokens.rs
triblespace-search/tests/: engine_integration.rs  find_macro.rs  pile_ondisk_roundtrip.rs  pile_roundtrip.rs  scale_smoke.rs
